Fixed Bug with overlapping Parallax Containers

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -4,10 +4,8 @@
     justify-content: center;
     align-items: center;
     width: 80%;
-    margin: 25px;
     margin: 10%;
     font-family: monospace;
-    margin-top: 200px;
 }
 
 .projectsHeading {
